<resources>
    <string name="app_name">Love Pets</string>
    <string name="actualizar">UPDATE</string>
    <string name="inicioSesion">LOGIN</string>
    <string name="registrarse">REGISTER</string>
    <string name="nombreUsuario">EMAIL</string>
    <string name="recordarContraseña">You forget the password?</string>
    <string name="contraseña">PASSWORD</string>
    <string name="confirmarContraseña">CONFIRM PASSWORD</string>
    <string name="iniciar">START</string>
    <string name="miAnimal">MY PET</string>
    <string name="camara">CAMERA</string>
    <string name="ajustes">SETTINGS</string>
    <string name="compartir">SHARE</string>
    <string name="herramientas">Tools</string>
    <string name="extra">Group</string>
    <string name="navigation_drawer_open">Navigation opened</string>
    <string name="navigation_drawer_close">Navigation closed</string>
    <string name="perros">DOG</string>
    <string name="gatos">CAT</string>
    <string name="roedores">RODENT</string>
    <string name="pajaros">BIRD</string>
    <string name="creatingPet">CREATING YOUR PET</string>
    <string name="namePet">Name Pet</string>
    <string name="agePet">Age Pet</string>
    <string name="breedPet">Breed Pet</string>
    <string name="otroAnimal">Other</string>
    <string name="informacion1">
        Love Pets is much more than a simple application about animals, in it you can visualize information about animals (type of food, accessories, hygiene), animals such as dogs, cats, birds, and rodents.
    </string>
    <string name="informacion2">
        On the other hand, we can also create our own pet, giving its name, age and the animal it is by choosing from our different options. In addition, we can use the camera to take pictures of our animals.
    </string>
    <string name="informacion3">
        Enjoy our application, and share it with your friends and family, thank you very much for your attention and if you need anything you already know, in settings contact us for whatever !!!!
    </string>
    <string name="comida">FOOD</string>
    <string name="accesorios">ACCESSORIES</string>
    <string name="higiene">HYGINE</string>
    <string name="comidaPerro">Dog food is essential to the daily diet, providing key nutrients for health and vitality. Snacks and treats are excellent for training and expressing affection, with options ranging from dental bones to irresistible treats. Natural treats offer high quality ingredients, ideal for dogs with food sensitivities. \n\nWet food, known as canned food, is a tasty option to supplement the diet, especially beneficial for dogs with dental problems or difficulty chewing dry food. It is crucial to check labels to ensure it meets your dogs specific nutritional needs.</string>
    <string name="comidaGato">Premium cat food: Choosing a high-quality cat food is essential for your cats diet. Look for reputable brands that offer balanced formulas, rich in protein and essential nutrients, contributing not only to satisfying carnivorous instincts, but also to dental health and a lustrous coat.\n\nIrresistible Snacks: Cat snacks are ideal little treats as a reward or gesture of affection. From crunchy treats to soft bites, be sure to choose options with wholesome ingredients, avoiding excessive fats or artificial additives.\n\nCatnip: The Herb of Happiness: This catnip stimulates play and fun in your cat, generating a euphoric reaction followed by relaxation. Available in toys, sprays or in its natural form, catnip adds magic to the feline experience.\n\nWet Feed: A delicious and nutritious option, especially beneficial for older cats or those with dental problems. Available in tins or sachets, choose options that meet nutritional standards and suit your cats specific needs, whether its to maintain a healthy weight or support kidney health.</string>
    <string name="comidaPajaros">Canaryseed stands out as an essential component of the avian diet, being rich in protein, fibre and healthy fats.\n\nIt is recommended to choose quality canaryseed mixes specifically formulated for the needs of each species. In addition, providing a variety of seeds such as sunflower, millet and flaxseed complements dietary needs, providing nutritional diversity. \n\nNutritional supplements, especially designed with vitamins and minerals for birds, are essential to address potential dietary deficiencies and strengthen the overall health of your feathered companions.</string>
    <string name="comidaRoedores">Specialist feed is essential in the daily diet of rodents, formulated to meet their specific nutritional requirements. Looking for reputable brands that offer balanced formulas, rich in fibre, vitamins and minerals is key. \n\nQuality hay, such as alfalfa or Timothy grass, is crucial for digestion and dental health, and providing healthy snacks, such as fruit and seeds, adds variety without compromising nutritional balance. A diet that includes feed, hay and snacks ensures the health and happiness of your adorable rodent friends.</string>
    <string name="accesoriosPerro">Providing your dog with a comfortable bed is essential for rest, with options ranging from orthopaedic to raised beds depending on the pets size and preference. Toys are essential for entertainment and mental stimulation, including balls and interactive toys. \n\nProper food and water bowls are essential for health, with options such as elevated and automatic feeders. Harnesses and collars are crucial for walking and identification, both of which must fit properly. \n\nDog clothing, from coats to jumpers, is practical in cold weather. Pet carriers are essential for travel, available in various styles to ensure your dogs safety and comfort.</string>
    <string name="accesoriosGato">Providing an enriching environment for your feline means carefully choosing a variety of accessories that meet their needs and stimulate their well-being. From cushioned beds that offer shelter and style to interactive toys that keep his mind sharp, these essentials ensure a fulfilling life for your cat. \n\nFeeding and watering bowls designed for easy feeding and portion control, harnesses and collars for safe and stylish walks, carriers for adventures and vet visits, and scratching posts to keep claws healthy and furniture intact. By integrating these accessories, you provide your cat with an environment that supports his physical and emotional health, promoting a happy and active life. \n\nExplore the world of cat accessories and watch your feline friend thrive in his enriched environment!</string>
    <string name="accesoriosPajaros">Choosing the right accessories is key to the health and happiness of your birds. Opt for spacious cages, built with safe materials and species-appropriate bars. Make sure they are easy to access and have removable trays for easy cleaning. \n\nFor optimal feeding and hydration, choose feeders and drinkers designed specifically for birds, avoiding waste and making cleaning and refilling easy. Introduce stimulating toys, such as hanging objects, mirrors and items that encourage exploration and play, rotating them regularly to maintain interest and provide mental stimulation and exercise. \n\nThese accessories will create an enriching environment, promoting vitality and joy for your feathered friends in their home. Explore these options and give your birds a full life inside their cages!</string>
    <string name="accesoriosRoedores">Selecting the right cage for your rodents is crucial. Opt for large spaces that allow for exploration and exercise, built with safe materials and appropriate bars to prevent escape. Easily accessible doors and removable areas make cleaning and maintenance easier.\n\nWhen it comes to feeders and drinkers, choose options designed specifically for rodents. Look for ones that prevent food waste and are easy to clean and refill. Strategic placement within the cage ensures convenient access for your little friends.\n\nIntroduce stimulating toys into their environment, such as exercise wheels, exploratory tubes and hanging toys. Make sure they are safe, with no small parts that could pose a risk. These accessories help keep your rodents active, happy and healthy. Provide an enriching environment where they can explore, play and thrive. Discover the world of rodent accessories and watch your adorable pets enjoy a full and active life!</string>
    <string name="higienePerro">Coat care is essential to maintain your dogs health and appearance. Regular brushing helps prevent tangles and stimulates blood circulation. The frequency depends on the type of coat.\n\nRegular bathing is essential for hygiene. Use dog shampoos and conditioners, avoiding human products. Consider specific skin and coat needs, such as shampoos for dry skin.\n\nThe use of deworming pouches, such as collars or shampoos, is essential to prevent fleas and ticks. Consult with your veterinarian to choose the most effective method for your dogs particular needs.</string>
    <string name="higieneGato">Your cats well-being is achieved through essential grooming practices. Brush regularly to prevent tangles, choosing suitable brushes. Provide clean and accessible litter boxes, keeping one per cat and cleaning them regularly. Experiment with different types of litter. \n\nUse dewormers such as pipettes or collars to prevent fleas and ticks. Consult a veterinarian for the most effective treatment. These practices, integrated into your daily routine, ensure your cats health and happiness, strengthening the bond between the two of you.</string>
    <string name="higienePajaros">Selecting suitable litter is crucial to keeping your birds cage clean. Opt for absorbent materials such as recycled paper or wood shavings to control odours and provide comfort. Change litter regularly to prevent build-up and ensure a hygienic environment.\n\nWhen it comes to pest control, prevention is essential. Use bird-specific products, such as sprays or powders, according to the manufacturers instructions and the guidance of an avian veterinarian. Regular prevention will protect your birds against fleas, lice and other potential parasites.</string>
    <string name="higieneRoedores">Selecting the right bedding is essential to keep your rodents cage clean and comfortable. Opt for absorbent materials such as wood shavings or recycled paper to control odours and provide a soft surface. Change litter regularly to prevent build-up and ensure a hygienic environment.\n\nFor parasite prevention, use rodent-specific products, such as sprays or powders, according to the manufacturers instructions and the guidance of a trained veterinarian. Regular prevention will help protect your little friends from fleas, ticks and other potential parasites.</string>
    <string name="telefonoContacto">CONTACT TELEPHONE NUMBER</string>
    <string name="settingsChat">CHAT</string>
    <string name="settingsCache">CACHE</string>
    <string name="settingsGeneral">VIBRATION</string>
    <string name="salir">LOG OUT</string>
    <string name="cacheMode">OFFLINE MODE</string>
    <string name="tituloMascota">YOUR FANTASTIC PET</string>
    <string name="audio">MUSIC</string>
    <string name="video">VIDEO</string>
    <string name="enviar">LOAD</string>
    <string name="nombreVideo">Type the name of the video</string>
    <string name="start">START</string>
    <string name="pause">PAUSE</string>
    <string name="stop">STOP</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Cahce</string>
    <string name="sync_vibrate">General</string>
    <string name="signature_title">Chat username</string>
    <string name="reply_title">Color Picker</string>
    <string name="sync_title">Offline mode</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="sync_checkVibrate">Vibrate</string>
    <string name="colorElegido">Color Pickle</string>
</resources>