<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pets"
            android:title="@string/miAnimal"
            android:icon="@drawable/ic_action_pet"/>

        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_action_name"
            android:title="@string/camara" />
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/herramientas">
            <menu>
                <item
                    android:id="@+id/nav_tools"
                    android:icon="@drawable/ic_action_tools"
                    android:title="@string/ajustes" />

            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/extra">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:title="@string/compartir"
                    android:icon="@drawable/ic_action_send"
                    />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="More">
            <menu>
                <item
                    android:id="@+id/nav_retrofit"
                    android:title="RETROFIT"
                    android:icon="@drawable/ic_action_retrofit"
                    />
                <item
                    android:id="@+id/nav_chat"
                    android:title="CHAT"
                    android:icon="@drawable/ic_action_chat"
                    />
                <item
                    android:id="@+id/nav_multimedia"
                    android:title="MULTIMEDIA"
                    android:icon="@drawable/ic_action_multimedia"
                    />
            </menu>
        </item>
    </group>
</menu>
