<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Orange"
    tools:context=".fragments.RegisterFragment">

    <TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/registrarse"
    android:textStyle="bold"
    android:textSize="50dp"
    android:layout_gravity="center|top"
    android:layout_marginTop="50dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="150dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombreUsuario" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="300dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userPass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contraseña" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="450dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPass"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:hint="@string/confirmarContraseña" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAcces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:backgroundTint="@color/Green"
        android:layout_marginBottom="100dp"
        android:layout_gravity="bottom|center"/>

</FrameLayout>