<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Orange"
    tools:context="fragments.LoginFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="353dp"
        android:layout_height="626dp"
        android:layout_margin="8dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="175dp"
            android:layout_height="210dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/nombreUsuario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="280dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/contraseña"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textRecordar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="360dp"
            android:layout_marginEnd="30dp"
            android:textSize="20dp"
            android:clickable="true"
            android:textColor="@color/Blue"
            android:text="@string/recordarContraseña"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/btnLogin"
            android:layout_width="225dp"
            android:layout_height="62dp"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="150dp"
            android:text="@string/inicioSesion" />

        <Button
            android:id="@+id/btnRegistrarse"
            style="@style/btnRegister"
            android:layout_width="225dp"
            android:layout_height="62dp"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="50dp"
            android:text="@string/registrarse" />


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>